--- a/HearthisAt-Player/Info.plist
+++ b/HearthisAt-Player/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.9.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>AUTO_GENERATED</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
